--- a/src/media.scss
+++ b/src/media.scss
@@ -1,5 +1,5 @@
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) { 
+@media (min-width: 576px) {
   // .search-input-sec {min-width:100px !important; display:inline-block;}
   // .search-input-sec .form-group > input[type="text"] {min-width:100px!important;width:100px;}
  }
@@ -11,7 +11,7 @@
   .search-input-sec .form-group > input[type=text] {display: none;}
 }
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { 
+@media (min-width: 768px) {
   // .search-input-sec {min-width:150px !important;}
   // .search-input-sec .form-group > input[type="text"]{min-width: 150px !important;width: 150px}
 }
@@ -19,8 +19,9 @@
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
   .ng-sidebar {width:60px !important;}
-  header .navbar .navbar-brand {width:100%}
-  header .top-nav {margin-top:65px;}
+  .navbar .navbar-brand {width:100%}
+  .top-nav {margin-top:64px;width: 100%;left: 0 !important;z-index:12 !important;}
+  .sidenav {padding-top:140px !important;}
   .sidenav > ul > li > a > span {display:none}
   .wrapper {margin: 112px 0 0 60px !important;width: calc(100% - 60px) !important;}
   .sidenavClosed .wrapper {margin: 112px 0 0 0px !important;width: calc(100% - 0px) !important;}
