--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -22,6 +22,6 @@
 
 
 .copy-txt { position: absolute; bottom: 5px;  left: 0; right:0; text-align: center; color: #fff; }
-.copy-txt:before {content:'';background-image: url(/assets/images/common/icons/fc-copy.png);min-width:16px; min-height:16px;position: absolute;margin-left: -20px;}
+.copy-txt:before {content:'';background-image: url(/assets/images/common/icons/fc-copy.png);min-width:16px; min-height:16px;position: absolute;margin-left: -20px;top:5px;}
 
 
