--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -6,6 +6,7 @@
     [chartType]="pieChartType"
     [options]="pieChartOptions"
     [plugins]="pieChartPlugins"
+    [colors]="pieChartColors"
     [legend]="pieChartLegend"
   >
   </canvas>
