--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@ header {width:100%; display:inline-block;}
 .navbar .navbar-brand {position: fixed;left: 0;top: 0;z-index: 3;margin: 0;padding: 0;min-width: 220px;text-align: center;padding: 19px 0;background: rgba(24,31,44,1);/* background-color: white; */}
 .navbar .navbar-brand > img { margin: 0 auto; }
 .navbar .navbar-brand .navbar-toggler{display: none;}
-.navbar .sidenavWrap {background: #181f2c;position:fixed;left:0;top:0;bottom: 0;z-index: 2;padding-top: 95px;min-width: 220px;transition: 0.5s;width: 220px;overflow: hidden;}
+.navbar .sidenavWrap {background: #d3d7dd;position:fixed;left:0;top:0;bottom: 0;z-index: 2;padding-top: 95px;min-width: 220px;transition: 0.5s;width: 220px;overflow: hidden;}
 .top-nav { background:#fff; position:fixed; left:calc(0px + 220px); right: 0; top:0; z-index: 1; transition: 0.5s; padding-top: 4px; padding-bottom: 4px; }
 .top-nav .nav-user {float:right;padding-right:10px;}
 .top-nav ul.navigation { display: inline-block; padding: 0; margin: 0; list-style: none; }
