--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="sidenavWrap" id="navbarHeader">
   <div class="sidenav">
     <ul>
-      <li><a href="#" class=""><i class="fc-home"></i> <span>Dashboard</span></a></li>
+      <li><a href="#" class="active"><i class="fc-home"></i> <span>Dashboard</span></a></li>
       <li><a href="#"><i class="fc-user-plus"></i> <span>Document MOM</span></a></li>
       <li class="all-doc"><a href="#"><i class="fc-all-documents"></i> <span>All Documented MOM</span></a></li>
       <li><a href="#"><i class="fc-map-marker"></i> <span>Track Action</span></a></li>
