--- a/src/app/dashboard/minutes-of-meetings/minutes-of-meetings.component.scss
+++ b/src/app/dashboard/minutes-of-meetings/minutes-of-meetings.component.scss
@@ -1,7 +1,7 @@
 
 .meeting-listing {margin:0; padding:0;
-    li{list-style:none; display:table;width:100%;padding-bottom:13px; font-size: 0.9rem;}
-    li > .txt {font-size: 0.8rem;}
+    li{list-style:none; display:table;width:100%;padding-bottom:13px; font-size: 0.8rem;}
+    li > .txt {font-size: 0.9rem;}
     li > .date {width:100px;}
     li > .time {width:95px;text-align:right;}
     li > div{padding:0 10px;display:table-cell; vertical-align:top;}
@@ -14,4 +14,4 @@
 .tbl-form.table td, .tbl-form.table th {border-top:0;}
 .tbl-form.table td {font-size:16px; padding:0 11px;}
 input[type=checkbox] {width:14px; height:14px; border-radius:0; background: #fff; display: inline-block;}
-.meeting-wrap {margin:20px 0 0 10px;}
+.meeting-wrap {margin:20px 0 0 10px; height: 100vh;}
