--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <!--pageContent-->
     <div class="navbar">
       <div class="container">
-        <a href="index.html" class="navbar-brand d-flex align-items-center"
+        <a href="#" class="navbar-brand d-flex align-items-center"
           ><img src="assets/images/common/logo.png" alt=""
         /></a>
 
