--- a/src/app/header/search-bar/search-bar.component.scss
+++ b/src/app/header/search-bar/search-bar.component.scss
@@ -5,3 +5,12 @@
         input[type="text"]{ color:#181f2c; border: 0; outline: 0; line-height: 40px; padding: 0;min-width: 250px;font-size: 1.2rem; color:#000}
     }
   }
+
+
+  @media (max-width: 991.98px) {
+    .search-input-sec {min-width:75%; width:75%;
+      .form-group {
+        input[type="text"] {min-width: 75%;width:75%;font-size: 0.9rem;}
+        }
+      }
+  }
