--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -7,6 +7,6 @@
       <li><a href="#"><i class="fc-map-marker"></i> <span>Track Action</span></a></li>
       <li class="abt"><a href="#"><i class="fc-info"></i> <span>About</span></a></li>
    </ul>
-    <span class="d-flex"><span class="align-items-center"><span class="copy-txt"> Copyright</span></span></span>
+    <span class="d-flex"><span class="align-items-center"><span class="copy-txt"><i class="fc-copy"></i> <span>Copyright</span></span></span></span>
   </div>
 </div>
