--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,10 @@
-
 ng-sidebar-container {position: absolute;}
-ng-sidebar {display:table-cell; width:220px; background:red;}
+ng-sidebar {display:table-cell; width:220px;}
 .ng-sidebar__content {padding-left:220px;display:table-cell;position:relative;}
 ::ng-deep .ng-sidebar {width:220px; background:#181f2c;}
 .toogle-search {display:inline-block;}
 
-
+/**NavBar Css**/
 .navbar { padding-left: 220px;
     .navbar-brand {position: fixed;left: 0;top: 0;z-index: 3;margin: 0;padding: 0;min-width: 220px;text-align: center;padding: 19px 0;background: rgba(24,31,44,1);
       img { margin: 0 auto; }
@@ -14,6 +13,7 @@ ng-sidebar {display:table-cell; width:220px; background:red;}
     .sidenavWrap {background: #181f2c;position:fixed;left:0;top:0;bottom: 0;z-index: 2;padding-top: 95px;min-width: 220px;transition: 0.5s;width: 220px;overflow: hidden;}
 }
 
+/**TopNav Css**/
 .top-nav { background:#fff; position:fixed; left:calc(0px + 220px); right: 0px; top:0; z-index: 1; transition: 0.5s; padding-top: 4px; padding-bottom: 4px;
   .nav-user {float:right;padding-right:10px;}
   .navigation { display: inline-block; padding: 0; margin: 0; margin-right:10px; list-style: none;
@@ -23,6 +23,7 @@ ng-sidebar {display:table-cell; width:220px; background:red;}
     }
 }
 
+/**NavBar Toggle Css**/
 .navbar-toggler {margin-top:-10px;
     &:focus {outline:0;}
     .navbar-toggler-icon,
@@ -31,6 +32,8 @@ ng-sidebar {display:table-cell; width:220px; background:red;}
     .navbar-toggler-icon:before{ content: ''; height: 100%; width: 100%; left: 0; position: absolute; top: -8px; background:#181f2c;  }
     .navbar-toggler-icon:after { content: ''; height: 100%; width: 100%; left: 0; position: absolute; bottom: -8px;background:#181f2c; }
 }
+
+/**Sidebar Toggle Css**/
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon,
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon:before,
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon:after { height: 4px; background: #515151; width: 28px; position: relative; border-radius: 2px; }
@@ -41,6 +44,10 @@ ng-sidebar {display:table-cell; width:220px; background:red;}
 
 
 @media (max-width: 991.98px) {
-  .toogle-search {width:50%}
+  .toogle-search {width:50%;vertical-align: top;}
 }
 
+
+@media (max-width: 575.98px) {
+  .toogle-search {width:30%;vertical-align: top;}
+}
