--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="row row-zero">
-    <div class="col-sm-7">
+    <div class="col-md-7 col-sm-12">
       <div class="graybg">
         <div class="cust-card">
           <h2>My Action Items</h2>
@@ -11,7 +11,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-5">
+    <div class="col-md-5 col-sm-12">
       <div class="nicescroll-box">
         <div class="wrap">
           <app-minutes-of-meetings></app-minutes-of-meetings>
