--- a/src/app/header/search-bar/search-bar.component.scss
+++ b/src/app/header/search-bar/search-bar.component.scss
@@ -10,7 +10,16 @@
   @media (max-width: 991.98px) {
     .search-input-sec {min-width:75%; width:75%;
       .form-group {
-        input[type="text"] {min-width: 75%;width:75%;font-size: 0.9rem;}
+        input[type="text"] {min-width: 75%;width:75%;font-size: 1rem;}
+        }
+      }
+  }
+
+
+  @media (max-width: 575.98px) {
+    .search-input-sec {min-width:20%; width:20%;
+      .form-group {
+        input[type="text"] {display:none;}
         }
       }
   }
