--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -32,8 +32,11 @@
   }
 
 
-.copy-txt { position: absolute; bottom: 5px;  left: 0; right:0; text-align: center; color: #fff;
-  &:before {content:'';background-image: url(/assets/images/common/icons/fc-copy.png);min-width:16px; min-height:16px;position: absolute;margin-left: -20px;top:5px;}
+.copy-txt { position: absolute; bottom: 0px;  left: 0; right:0; text-align: center; color: #fff; font-size:12px;background: #181f2c;padding: 0.5rem;}
+.fc-copy {width:30px; display:inline-block}
+.fc-copy:before {top:-2px; position: absolute;}
+
+
+@media (max-width: 767.98px) {
+  .copy-txt span {display:none}
 }
-
-
