--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,11 +1,11 @@
 <div class="sidenavWrap" id="navbarHeader">
   <div class="sidenav">
     <ul>
-      <li><a href="#" class="active"><i class="fc-home"></i> <span>Dashboard</span></a></li>
-      <li><a href="#"><i class="fc-user-plus"></i> <span>Document MOM</span></a></li>
-      <li class="all-doc"><a href="#"><i class="fc-all-documents"></i> <span>All Documented MOM</span></a></li>
-      <li><a href="#"><i class="fc-map-marker"></i> <span>Track Action</span></a></li>
-      <li class="abt"><a href="#"><i class="fc-info"></i> <span>About</span></a></li>
+      <li routerLinkActive="active"><a routerLink="dashboard" class="active"><i class="fc-home"></i> <span>Dashboard</span></a></li>
+      <li routerLinkActive="active"><a routerLink="document-mom"><i class="fc-user-plus"></i> <span>Document MOM</span></a></li>
+      <li routerLinkActive="active" class="all-doc"><a routerLink="dashboard"><i class="fc-all-documents"></i> <span>All Documented MOM</span></a></li>
+      <li routerLinkActive="active"><a routerLink="dashboard"><i class="fc-map-marker"></i> <span>Track Action</span></a></li>
+      <li routerLinkActive="active" class="abt"><a routerLink="dashboard"><i class="fc-info"></i> <span>About</span></a></li>
    </ul>
     <span class="d-flex"><span class="align-items-center"><span class="copy-txt"><i class="fc-copy"></i> <span>Copyright</span></span></span></span>
   </div>
